--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -7,110 +7,141 @@
     <title>Register Page</title>
   </head>
   <body>
-    <div id="content">
+    <div id="content" class="mt-4">
       <div class="grid grid-cols-12">
         <div class="col-span-4 md:col-span-2 lg:col-span-3 xl:col-span-4"></div>
         <div class="col-span-12 md:col-span-8 lg:col-span-6 xl:col-span-4">
-            <div
-                class="block p-6 border-t-8 border-t-blue-700 bg-white rounded-xl shadow-sm 
-                    hover:bg-gray-200 dark:bg-gray-800 dark:border-t-blue-900 dark:hover:bg-gray-700"
+          <div
+            class="block p-6 border-t-8 border-t-blue-700 bg-white rounded-xl shadow-sm hover:bg-gray-200 dark:bg-gray-800 dark:border-t-blue-900 dark:hover:bg-gray-700"
+          >
+            <h5
+              class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"
             >
-                <h5
-                class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"
+              Signup Here
+            </h5>
+            <p class="font-normal text-gray-700 dark:text-gray-400">
+              Start managing contacts on cloud...
+            </p>
+
+            <form
+              th:action="@{'/do-register'}"
+              method="post"
+              th:object="${userForm}"
+              class="mt-5"
+            >
+              <div class="mb-3">
+                <label
+                  for="name"
+                  class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
                 >
-                Signup Here
-                </h5>
-                <p class="font-normal text-gray-700 dark:text-gray-400">
-                    Start managing contacts on cloud...
-                </p>
+                  Name
+                </label>
 
-                <form class="mt-5">
-                    <div class="mb-3">
-                        <label for="name" 
-                                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
-                                Name
-                        </label>
+                <input
+                  type="text"
+                  id="name"
+                  th:field="*{name}"
+                  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                  placeholder="username"
+                  required
+                />
+              </div>
 
-                        <input 
-                            type="text" 
-                            id="name" 
-                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" 
-                            placeholder="username" 
-                            required 
-                        />
-                    </div>
+              <div class="mb-3">
+                <label
+                  for="email"
+                  class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                >
+                  Email
+                </label>
 
-                    <div class="mb-3">
-                        <label for="email" 
-                                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
-                                Email
-                        </label>
+                <input
+                  type="email"
+                  id="email"
+                  th:field="*{email}"
+                  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                  placeholder="name@flowbite.com"
+                  required
+                />
+              </div>
 
-                        <input 
-                            type="email" 
-                            id="email" 
-                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" 
-                            placeholder="name@flowbite.com" 
-                            required 
-                        />
-                    </div>
+              <div class="mb-3">
+                <label
+                  for="password"
+                  class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                >
+                  Password
+                </label>
 
-                    <div class="mb-3">
-                        <label for="password" 
-                                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
-                                Password
-                        </label>
+                <input
+                  type="password"
+                  id="password"
+                  th:field="*{password}"
+                  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                  placeholder="password"
+                  required
+                />
+              </div>
 
-                        <input 
-                            type="password" 
-                            id="password" 
-                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" 
-                            placeholder="password" 
-                            required 
-                        />
-                    </div>
+              <div class="mb-3">
+                <label
+                  for="phone"
+                  class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                >
+                  Contact Number
+                </label>
 
-                    <div class="mb-3">
-                        <label for="phone" 
-                                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
-                                Contact Number
-                        </label>
+                <input
+                  type="text"
+                  id="phone"
+                  th:field="*{phoneNumber}"
+                  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                  placeholder="+91 1234567890"
+                  required
+                />
+              </div>
 
-                        <input 
-                            type="text" 
-                            id="phone" 
-                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" 
-                            placeholder="+91 1234567890"
-                            required 
-                        />
-                    </div>
+              <div class="mb-3">
+                <label
+                  for="about"
+                  class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                >
+                  Write something about yourself
+                </label>
+                <textarea
+                  id="about"
+                  rows="6"
+                  th:field="*{about}"
+                  class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                  placeholder="Write here..."
+                >
+                </textarea>
+              </div>
 
-                    <div class="mb-3">      
-                        <label 
-                            for="about" 
-                            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
-                                Write something about yourself
-                        </label>
-                        <textarea 
-                            id="about" 
-                            rows="6" 
-                            class="block p-2.5 w-full placeholder:text-gray-900 text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 
-                                dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-300 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" 
-                            placeholder="Write here...">
-                        </textarea>
-                    </div>
+              <div class="flex justify-center gap-3">
 
-                    <div class="flex justify-center gap-3">
-                        <button class="px-3 py-2 rounded text-white bg-gray-800 dark:bg-blue-700 hover:dark:bg-blue-800 hover:bg-gray-900">
-                            SignUp
-                        </button>
+                <button
+                  type="submit"
+                  class="px-3 py-2 rounded text-white bg-gray-800 dark:bg-blue-700 hover:dark:bg-blue-800 hover:bg-gray-900"
+                >
+                  Submit
+                </button>
 
-                        <button class="px-4 py-2 rounded text-white bg-orange-800 dark:bg-red-700 hover:dark:bg-red-800 hover:bg-orange-900">
-                            Reset
-                        </button>
-                    </div>
-                </form>
-            </div>
+                <button
+                  class="px-3 py-2 rounded text-white bg-gray-800 dark:bg-blue-700 hover:dark:bg-blue-800 hover:bg-gray-900"
+                >
+                  SignUp
+                </button>
+
+                <button
+                  type="reset"
+                  class="px-4 py-2 rounded text-white bg-orange-800 dark:bg-red-700 hover:dark:bg-red-800 hover:bg-orange-900"
+                >
+                  Reset
+                </button>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
     </div>
